--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.4",
     "morgan": "1.10.0",
-    "nanoid": "3.3.6"
+    "nanoid": "3.3.6",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -27,6 +28,6 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "^2.0.15"
   }
 }
