--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.4",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.2",
     "morgan": "1.10.0",
-    "nanoid": "3.3.6",
-    "passport-jwt": "^4.0.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -28,6 +30,6 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "2.0.15"
   }
 }
